# Rust-backend

./: .gitignore  Cargo.toml
migrations/: 001_create_tables.sql  20251113175934_create_users_table.sql
src/: dbconfig.rs  error.rs  handler.rs  main.rs  model.rs  route.rs
