[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }


dotenvy = "0.15"
serde_json = "1.0.145"
